--- a/public/cssfiles/search.css
+++ b/public/cssfiles/search.css
@@ -1,3 +1,32 @@
+body{
+  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url("/photos/bimbap.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  
+}
+
+
+
+.container{
+    text-align: center;
+}
+
+.search-button {
+  background-color: #000;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+  padding: 10px 20px;
+  font-size: 16px;
+}
+
+.bx {
+  margin-right: 10px;
+  font-size: 20px;
+}
+
+
 
 
 input[type = "checkbox"]{
@@ -32,3 +61,39 @@ input[type = "checkbox"]:before{
 input:checked[type = "checkbox"]:before{
     left:30px;
 }
+
+
+.input-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #000;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    color: white;
+    box-shadow: 0.25rem 0.25rem 0rem #c0c0c0;
+    width: 70%;
+    margin-left: 270px;
+  }
+  
+ .searchBar {
+    margin: 0 0.5rem 0 0.5rem;
+    width: 100%;
+    border: none;
+    outline: none;
+    background: #000;
+    color: white;
+    font-weight: bold;
+    height: 34px;
+
+  }
+  
+  ::placeholder {
+    color: #f0b2a8;
+  }
+
+  .bx-x:hover{
+    cursor: pointer;
+  }
+  
+
