--- a/public/cssfiles/searchUser.css
+++ b/public/cssfiles/searchUser.css
@@ -1,11 +1,31 @@
-#preloader{
-    background: #1b1d21 url(/photos/loaderFood.gif) no-repeat center;
-    background-size: 40%;
-    height: 100vh;
-    width: 100%;
-    position: fixed;
-    z-index:100;
+body{
+    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url("/photos/bimbap.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    
 }
+
+
+.container{
+    text-align: center;
+    align-items: center;
+}
+
+.search-button {
+  background-color: #000;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+  padding: 10px 20px;
+  font-size: 16px;
+}
+
+.bx {
+  margin-right: 10px;
+  font-size: 20px;
+}
+
 
 
 
@@ -35,9 +55,72 @@ input[type = "checkbox"]:before{
     background: white;
     transform: scale(1.1);
     box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-    transition:0.5s;
+    transition:.5s;
 }
 
 input:checked[type = "checkbox"]:before{
     left:30px;
+}
+
+
+h1{
+    color: white;
+}
+
+h4{
+    color: white;
+}
+
+.input-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #000;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    color: white;
+    box-shadow: 0.25rem 0.25rem 0rem #c0c0c0;
+    width: 70%;
+    margin-left: 270px;
+  }
+  
+ .searchBar {
+    margin: 0 0.5rem 0 0.5rem;
+    width: 100%;
+    border: none;
+    outline: none;
+    background: #000;
+    color: white;
+    font-weight: bold;
+    height: 34px;
+
+  }
+  
+  ::placeholder {
+    color: #f0b2a8;
+  }
+
+  .bx-x:hover{
+    cursor: pointer;
+  }
+  
+
+.card{
+    width: 50%;
+    margin: auto;
+    background: black;
+    color: white;
+    border-radius: 15px;
+}
+
+a{
+    text-decoration: none;
+    color:white;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+a:hover{
+    color:grey;    
+
 }
