--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -87,7 +87,7 @@
                   <% for (var x = 0; x < singleFoodPost.images.length ; x++){ %>
                       <% if(x==0){ %>
                           <div class="carousel-item active">
-                              <img src="<%= singleFoodPost.images[x].url %>" class="d-block w-100 h-50" alt="...">
+                              <img src= <%= singleFoodPost.images[x].url %> class="d-block w-100" alt="...">
                               <div class = "container2">
                                 <div class="form-check">
                                   <input class="form-check-input" type="checkbox" name = "deletedImages[]" value="<%= singleFoodPost.images[x].fileName %>" id="flexCheck-<%= x %>">
@@ -100,7 +100,7 @@
                           </div>
                       <% }else{ %>
                           <div class="carousel-item">
-                              <img src="<%= singleFoodPost.images[x].url %>" class="d-block w-100 h-50" alt="...">
+                              <img src= <%= singleFoodPost.images[x].url %> class="d-block w-100" alt="...">
                               <div class = "container2">
                                 <div class="form-check">
                                   <input class="form-check-input" type="checkbox" name = "deletedImages[]" value="<%= singleFoodPost.images[x].fileName %>" id="flexCheck-<%= x %>">
