--- a/public/cssfiles/searchFoodpost.css
+++ b/public/cssfiles/searchFoodpost.css
@@ -1,3 +1,35 @@
+body{
+    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url("/photos/dimsum.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+
+
+
+.container{
+    text-align: center;
+    align-items: center;
+}
+
+.search-button {
+  background-color: #000;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+  padding: 10px 20px;
+  font-size: 16px;
+}
+
+.bx {
+  margin-right: 10px;
+  font-size: 20px;
+}
+
+
+
+
 input[type = "checkbox"]{
     position: relative;
     width:60px;
@@ -29,4 +61,126 @@ input[type = "checkbox"]:before{
 
 input:checked[type = "checkbox"]:before{
     left:30px;
+}
+
+
+h1{
+    color: white;
+}
+
+h4{
+    color: white;
+}
+
+.input-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #000;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    color: white;
+    box-shadow: 0.25rem 0.25rem 0rem #c0c0c0;
+    width: 70%;
+    margin-left: 270px;
+  }
+  
+ .searchBar {
+    margin: 0 0.5rem 0 0.5rem;
+    width: 100%;
+    border: none;
+    outline: none;
+    background: #000;
+    color: white;
+    font-weight: bold;
+    height: 34px;
+
+  }
+  
+  ::placeholder {
+    color: #f0b2a8;
+  }
+
+  .bx-x:hover{
+    cursor: pointer;
+  }
+
+.card{
+    width: 60%;
+    margin: auto;
+    background: #000;
+    color: white;
+    border-radius: 15px;
+    padding: 10px;
+    margin-top: 2%;
+    transition: 0.4s ease-out;
+    border-width: 5px;
+    overflow: hidden;
+    height:300px;
+    box-shadow: 0 0 10px #03e9f4, 0 0 20px #03e9f4;
+}
+.card:hover{
+    transform: translate(2%,2%);
+    box-shadow: 0 0 60px #03e9f4, 0 0 120px #03e9f4;
+
+}
+.img-fluid{
+    width: 100%;
+    max-height: 250px;
+    object-fit: cover;
+    position: relative;
+    vertical-align:middle;
+    margin-top: 5%;
+    margin-bottom: 5%;
+} 
+
+.btn{
+    color: rgb(194, 194, 194);
+    cursor: pointer;
+    font-size: 10px;
+    font-weight: bold;
+    border: 3px solid #03e9f4;
+    box-shadow: 0 0 5px #03e9f4, 0 0 10px #03e9f4;
+    text-transform: uppercase;
+    letter-spacing: 2px;  
+    position: relative;
+    overflow: hidden;
+    z-index:auto;
+    transition: 1s all ease;
+    position: absolute;
+    bottom:0;
+    margin-bottom: 10px;
+    align-self: center;
+    width:120px;
+}
+.btn::before{
+    background:#fff;
+    content:"";
+    width:100%;
+    height:100%;
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    z-index:-1;
+    transition: all 0.6s ease;
+}
+
+.btn1::before{
+    width:100%;
+    height:0;
+    transform: translate(-50%,-50%) rotate(45deg);   
+}
+.btn1:hover::before{
+    height:380%;
+
+}
+
+.card-title{
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.description{
+    color: grey;
 }
