--- a/views/searchFoodpost.ejs
+++ b/views/searchFoodpost.ejs
@@ -1,5 +1,5 @@
 <%- include('./partials/header')%>
-<body class = "d-flex flex-column vh-100">
+<body>
 
     <div id = "preloader"></div>
     <link rel="stylesheet" href="/cssfiles/preloader.css">
@@ -18,30 +18,79 @@
     <%- include('./partials/flasher')%>
     <%- include('./partials/navbar')%>
 
-    <h1>Search</h1>
     
-    <form action="/foodposts/search" method = "GET" name = "searchBar">
-        <input type="text" name="search" placeholder="food search">
-        <input type="checkbox" id="searchUser" name="searchUser" value="true">
-        <label for="searchUser"> Search by user?</label><br>
-        <input type="submit" value="submit">
+    <div class = "container">
+        <br><br>
+        <h1><strong>SEARCH</strong></h1>
+        <br>
+        <form action="/foodposts/search" method = "GET" name = "searchBar">
+            <div class = "row">
+                <div class = "col-10">
+                    <div class="input-wrapper">
+                        <i class='bx bx-x bx-md clear-icon' ></i>
+                        <input class = "searchBar" type="text" placeholder="Search" name = "search">
+                        <button type="submit" class = "search-button"><i class='bx bx-search bx-md'></i></button>
+                    </div>
+                </div>
+                <div class = "col-2">
+                    <h4><strong>Search By User</strong></h4>
+                    <input type="checkbox" id="searchUser" name="searchUser" value="true">
+                </div>
+            </div>
+            
 
-    </form>
+
+    
+        </form>
+        <br>
+        <br>
+        
+    </div>
     
     <% if(emptyResult){ %>
         <h1>NO RESULTS FOUND</h1>
     <% }else {%>
+        <div class = "container">
+            <% if(result.length==1){ %>
+                <h1 class = "mb-3">Displaying top <%=result.length%> result </h1>
+            <% }else {%>
+                <h1 class = "mb-3">Displaying top <%=result.length%> results </h1>
+            <% } %>
+        </div>
+        <br>
         <% for(var i = 0;i<result.length;i++){ %>
-            <div class = "post">
-                <a href = "/foodposts/<%= result[i]._id %>"><%= result[i].name %></a>
-                <p>By <%= result[i].writer.username %></p>
-                <p>At <%= result[i].location %></p>
-                <p>At <%= result[i].description %></p>
-                <p hidden = true><%= result[i].geometry.coordinates %></p>
+            <div class="card sm-3" >
+                <div class="row">
+                    <div class="col-sm-4 align-self-center">
+                    <a href="https://developer.mozilla.org/en-US/">
+                    <% if(result[i].images.length){ %>
+                        <img class="img-fluid" alt="Responsive image" src="<%= result[i].images[0].url %>">
+                    <%}else{%>
+                        <img class="img-fluid" alt="Responsive image" src="/photos/defaultImage.jpg">
+                    <%}%>
+                    </a>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title"><%= result[i].name%></h5>
+                            <p class="card-text"><%= result[i].writer.username %></p>
+                            <p class="card-text">At <%= result[i].location %></p>
+                            <p class="card-text description"><strong><%= result[i].description %></strong></p>
+                            <p hidden = true><%= result[i].geometry.coordinates %></p>
+                        </div>
+                    </div>
+                    
+                </div>
+                <a class="btn btn1" href="/foodposts/<%= result[i]._id %>">View More</a>
+
+                
             </div>
-            
-    
-        <% }%>    
+            <br>
+        <% }%> 
+        <br>
+        <br> 
+        
+          
     <% } %>
 
 
@@ -49,10 +98,12 @@
         const MapBoxToken = "<%- process.env.MAPBOX_API_TOKEN %>"
     </script>
     <script src="/jsfiles/distanceForPosts.js"></script>
+    <script src="/jsfiles/searchFoodpost.js"></script>
     <link rel="stylesheet" href="/cssfiles/searchFoodpost.css">
 
 
 
 
 
-<%- include('./partials/footer')%>
+</body>
+</html>
