standardised search page background image

--- a/public/cssfiles/searchUser.css
+++ b/public/cssfiles/searchUser.css
@@ -1,5 +1,5 @@
 body{
-    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url("/photos/bimbap.jpg");
+    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url("/photos/dimsum.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     
