--- a/views/searchFoodpost.ejs
+++ b/views/searchFoodpost.ejs
@@ -46,9 +46,11 @@
         <br>
         
     </div>
-    
+   
     <% if(emptyResult){ %>
-        <h1>NO RESULTS FOUND</h1>
+        <div class = "container">
+            <h1>NO RESULTS FOUND</h1>
+        </div>
     <% }else {%>
         <div class = "container">
             <% if(result.length==1){ %>
