added search onto navbar

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -8,6 +8,7 @@
         <ul>
             <li><a href="/foodposts">All Foodposts</a></li>
             <li><a href="/foodposts/new">New Foodpost</a></li>
+            <li><a href="/foodposts/search">Search</a></li>
             <% if(!currentUser) {%>
                 <li><a href="/profile/register">Register</a></li>
             <% } else {%>
