--- a/views/show.ejs
+++ b/views/show.ejs
@@ -4,103 +4,83 @@
     <%- include('./partials/flasher')%>
     <%- include('./partials/navbar')%>
 
-    <style>
-        #map { top: 0; bottom: 0; height: 800px;width:700px;margin-left: 20px;margin-top: 50px;border-style:outset;}
-    </style>
+    <div class = "container">
+        <div id="map"></div>
 
-
-    <style>
-        #foodpostCarousel{
-            margin-left: auto;
-            margin-right: auto;
-            display:block;
-            width:50%
-        }
-
-    </style>
-    <div id="foodpostCarousel" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <% for (var x = 0; x< singleFoodPost.images.length ; x++){ %>
-                <% if(x==0){ %>
-                    <div class="carousel-item active">
-                        <img src="<%= singleFoodPost.images[x].url %>" class="d-block w-100" alt="...">
-                    </div>
-                <% }else{ %>
-                    <div class="carousel-item">
-                        <img src="<%= singleFoodPost.images[x].url %>" class="d-block w-100" alt="...">
-                    </div>
-                <%}%>
-            <%} %>
-     
-        </div>
-        <% if(singleFoodPost.images.length > 1) {%>
-        <a class="carousel-control-prev" href="#foodpostCarousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#foodpostCarousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-        <% } %>
     </div>
-    
 
 
+    <div class = "container mt-4 mycontainer1">
+        
+        
+        <div class="row">
+            <div class="col-6">
+                <div id="foodpostCarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <% if(!singleFoodPost.images.length){ %>    
+                            <div class="carousel-item active">
+                                <img src="/photos/defaultImage.jpg" class="d-block w-100" alt="...">
+                            </div>
+                        <% }else{ %>
+                            <% for (var x = 0; x< singleFoodPost.images.length ; x++){ %>
+                                <% if(x==0){ %>
+                                    <div class="carousel-item active">
+                                        <img src="<%= singleFoodPost.images[x].url %>" class="d-block w-100" alt="...">
+                                    </div>
+                                <% }else{ %>
+                                    <div class="carousel-item">
+                                        <img src="<%= singleFoodPost.images[x].url %>" class="d-block w-100" alt="...">
+                                    </div>
+                                <%}%>
+                            <%} %>
+                        <% }%>
+                        
 
-    
-    <div id="map"></div>
-    <h1>My name is <%= singleFoodPost.name %></h1>
-    <h1>By <a href="/profile/<%= singleFoodPost.writer._id %>"><%= singleFoodPost.writer.username %></a></h1>
-    <h2>Location: <%= singleFoodPost.location %></h2>
-    <h2>Description: <%= singleFoodPost.description %></h2>
-
-
-    <% if (singleFoodPost.writer){ %>
-        <%  if( currentUser && singleFoodPost.writer.equals(currentUser._id))  {%>
-            <div class="card-body">
-                <a href="/foodposts/<%=singleFoodPost._id%>/edit">Edit foodpost</a>
-                <form class="d-inline" action="/foodposts/<%=singleFoodPost._id%>?_method=DELETE" method="POST">
-                    <button class="btn btn-danger">Delete This post</button>
-                </form>
-            </div>
-        <% } %>
-    <% } %>
-    
-
-
-
-    <br>
-    <h2>Reviews Section</h2>
-
-
-    <% for(let review of singleFoodPost.reviews){ %>
-        <p><%= review.body %></p>
-        <% if (review.reviewer){ %>
-            <%  if( currentUser && review.reviewer.equals(currentUser._id))  {%> 
-                <form action="/foodposts/<%=singleFoodPost._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST">
-                    <button class="btn btn-sm btn-danger">Delete</button>
-                </form>
-            <% } %>
-        <% } %>
-    <% }%>
-
-    <% if(currentUser){ %>
-    <form action="/foodposts/<%= singleFoodPost._id %>/reviews" class="validated-form" novalidate method = "POST">
-        <div class="form-row">
-            <div class="col-md-4 mb-3">
-                <label for="description">Description</label>
-                <input type="text" class="form-control" id="description" name = "review[body]" placeholder="Description" required>
-                <div class="valid-feedback">
-                  Looks good!
+                    </div>
+                    <% if(singleFoodPost.images.length > 1) {%>
+                    <a class="carousel-control-prev" href="#foodpostCarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#foodpostCarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                    <% } %>
                 </div>
             </div>
-        </div> 
-        <button class="btn btn-primary" type="submit">Submit review</button>
- 
-    </form>
-    <% } %>
+            <div class="col-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title"><%= singleFoodPost.name %></h5>
+                        <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><i class='bx bx-user mr-2' ></i><a href="/profile/<%= singleFoodPost.writer._id %>"><%= singleFoodPost.writer.username %></a></li>
+                        <li class="list-group-item"><i class='bx bx-pin mr-2' ></i><%= singleFoodPost.location %></li>
+                        </ul>
+                        <br>
+                        <p class="card-text ml-3"><%= singleFoodPost.description %></p>
+                        <% if (singleFoodPost.writer){ %>
+                        <%  if( currentUser && singleFoodPost.writer.equals(currentUser._id))  {%>
+                            <div class="card-body" id = "editDelete">
+                                <div class="input-field">
+                                    <a href="/foodposts/<%=singleFoodPost._id%>/edit" class="btn" id = "mybutton2">Edit foodpost</a>
+                                </div>
+                                <form class="d-inline" action="/foodposts/<%=singleFoodPost._id%>?_method=DELETE" method="POST">
+                                    <div class="input-field">
+                                        <input type="submit" class="submit ml-3" value="Delete Post" id="firstButton">
+                                    </div>
+                                </form>
 
+                            </div>
+                        <% } %>
+                    <% } %>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        
+    </div>
     
     
     <!-- ======================================================================================================================================== -->
@@ -109,6 +89,8 @@
         const destination = [<%= singleFoodPost.geometry.coordinates[0] %>,<%= singleFoodPost.geometry.coordinates[1] %>]
     </script>
     <script src="/jsfiles/showMapbox.js"></script>
+    <link rel="stylesheet" href="/cssfiles/show.css">
+
     <!-- ======================================================================================================================================== -->
 
     
