--- a/public/cssfiles/home.css
+++ b/public/cssfiles/home.css
@@ -83,7 +83,18 @@
     bottom: 0; 
     height: 550;
     width:100%;
-    margin-left: 20px;
+    margin-left: 10px;
     margin-top: 50px;
     border-radius: 10px;
+}
+
+a{
+    text-decoration: none;
+    font-weight: bold;
+    color:white;
+
+}
+
+a:hover{
+    color:grey;
 }
