--- a/public/cssfiles/searchFoodpost.css
+++ b/public/cssfiles/searchFoodpost.css
@@ -184,3 +184,15 @@ cursor: pointer;
 .description{
     color: grey;
 }
+
+a{
+    text-decoration: none;
+    font-weight: bold;
+    color:white;
+
+}
+
+
+a:hover{
+    color:grey;
+}
