--- a/views/fakeShow.ejs
+++ b/views/fakeShow.ejs
@@ -86,7 +86,7 @@
     <% }%>
 
     <% if(currentUser){ %>
-    <form action="/foodposts/<%= singleFoodPost._id %>/reviews" class="validated-form" novalidate method = "POST">
+    <form action="/foodposts/<%= singleFoodPost._id %>/reviews" class="validated-form" method = "POST">
         <div class="form-row">
             <div class="col-md-4 mb-3">
                 <label for="description">Description</label>
