--- a/views/profilePage.ejs
+++ b/views/profilePage.ejs
@@ -1,56 +1,108 @@
 <%- include('./partials/header')%>
-<body class = "d-flex flex-column vh-100">
+<body>
     <%- include('./partials/preloader')%>
     <%- include('./partials/flasher')%>
     <%- include('./partials/navbar')%>
-    <p><%= userToFind.username %></p>
-
+    <div class = "sidebar" style = "border-top-right-radius: 0px;border-bottom-right-radius: 0px;">
+        <header>
+            <h2><strong>Friendlist</strong></h2>
+        </header>
+        <div class = "scrollbox">
+            <div class = "scrollbox-inner">
+                <% if (!userToFind.friends.length){%>
+                    <div class="card">
+                        <div class="card-body card-body2">
+                            No Friends Yet
+                        </div>
+                    </div>
+                    
+                <%}else{%>
+                    <% for (let friend of userToFind.friends){%>
+                        <a href="/profile/<%= friend._id %>">
+                            <div class="card">
+                                <div class="card-body">
+                                    <%= friend.username %>
+                                </div>
+                            </div>
+                        </a>
+                    <%}%>
+                <%}%>
+                
+            </div> 
+        </div>    
+    </div>
 
     <% if (friendOption == 1){ %>
+        <div class = "sidebar2" style = "border-top-left-radius: 0px;border-bottom-left-radius: 0px;">
+            <header>
+                <h2><strong>Friend Requests</strong></h2>
+            </header>
+            <div class = "scrollbox">
+                <div class = "scrollbox-inner">
+                    <% if (!allFriendRequests.length){%>
+                        <div class="card">
+                            <div class="card-body card-body2">
+                                No Friends Requests
+                            </div>
+                        </div>
+                        
+                    <%}else{%>
+                        <% for (let friendReq of allFriendRequests){%>
+                            <a href="/profile/<%= friendReq.requester._id %>">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <%= friendReq.requester.username %>
+                                    </div>
+                                </div>
+                            </a>
+                        <%}%>
+                    <%}%>
+                    
+
+                </div> 
+            </div>    
+        </div>
+    <%}%>
+
+
+    <div class = "container" style="margin-left: 255px; background: white; width: 70%; padding: 0px;">
+        <p><%= userToFind.username %></p>
+
+
+       
         
-        <strong>Pending Friend Request</strong>
-        <br>
-        <% for (let friendReq of allFriendRequests){%>
-            <p><%= friendReq.requester.username %></p>
-            <form action="/profile/acceptFriend/<%=friendReq.requester._id %>" method = "POST">
+        <%if (friendOption == 2){ %>
+            <form action="/profile/removeFriend/<%= userToFind._id %>?_method=DELETE" method = "POST">
+                <button type="submit">Remove Friend</button>
+            </form>
+        <% }else if(friendOption == 3){ %>
+            <p>Friend request pending!</p>
+        
+        <% }else if(friendOption == 4){ %>
+            <form action="/profile/acceptFriend/<%= userToFind._id %>" method = "POST">
                 <button type="submit">Accept Friend Request</button>
             </form>
+        <% } else if(friendOption == 5){ %>
+            <form action="/profile/addFriend/<%= userToFind._id %>" method = "POST">
+                <button type="submit">Add Friend</button>
+            </form>
+        <% } %>
+        
+        
+        
+        <br>
+        <br>
+        <% for (let foodpost of foodPostsByUser){%>
+            <a href = "/foodposts/<%= foodpost._id %>"><%= foodpost.name %></a>
+            <p>At <%= foodpost.location %></p>
         <%}%>
-    
-    <%}else if (friendOption == 2){ %>
-        <form action="/profile/removeFriend/<%= userToFind._id %>?_method=DELETE" method = "POST">
-            <button type="submit">Remove Friend</button>
-        </form>
-    <% }else if(friendOption == 3){ %>
-        <p>Friend request pending!</p>
-    
-    <% }else if(friendOption == 4){ %>
-        <form action="/profile/acceptFriend/<%= userToFind._id %>" method = "POST">
-            <button type="submit">Accept Friend Request</button>
-        </form>
-    <% } else if(friendOption == 5){ %>
-        <form action="/profile/addFriend/<%= userToFind._id %>" method = "POST">
-            <button type="submit">Add Friend</button>
-        </form>
-    <% } %>
-    
-    <br>
-    <strong>Friend list</strong>
-    <% for (let friend of userToFind.friends){%>
-        <a href="/profile/<%= friend._id %>"><p><%= friend.username %></p></a>
-    <%}%>
-    
-    
-    <br>
-    <br>
-    <% for (let foodpost of foodPostsByUser){%>
-        <a href = "/foodposts/<%= foodpost._id %>"><%= foodpost.name %></a>
-        <p>At <%= foodpost.location %></p>
-    <%}%>
+    </div>
     
     
     
     
     
-    <%- include('./partials/footer')%>
+    <link rel="stylesheet" href="/cssfiles/profilePage.css">
+</body>
+</html>
     
