--- a/views/profilePage.ejs
+++ b/views/profilePage.ejs
@@ -3,91 +3,177 @@
     <%- include('./partials/preloader')%>
     <%- include('./partials/flasher')%>
     <%- include('./partials/navbar')%>
-    <div class = "sidebar" style = "border-top-right-radius: 0px;border-bottom-right-radius: 0px;">
-        <header>
-            <h2><strong>Friendlist</strong></h2>
-        </header>
-        <div class = "scrollbox">
-            <div class = "scrollbox-inner">
-                <% if (!userToFind.friends.length){%>
-                    <div class="card">
-                        <div class="card-body card-body2">
-                            No Friends Yet
-                        </div>
+    
+    <% if (friendOption == 1){ %>
+        <div class = "container mycontainer1">
+            <div class = "row">
+                <div class = "col-3" style = "padding: 0px;">
+                    <div class = "sidebar" style = "border-top-right-radius: 0px;border-bottom-right-radius: 0px;">
+                        <header class = "mt-3">
+                            <h2><strong>Friendlist</strong></h2>
+                        </header>
+                        <br>
+                        <div class = "scrollbox">
+                            <div class = "scrollbox-inner">
+                                <% if (!userToFind.friends.length){%>
+                                    <div class="card card1">
+                                        <div class="card-body card-body2" style="text-align: center;">
+                                            No Friends Yet
+                                        </div>
+                                    </div>
+                                    
+                                <%}else{%>
+                                    <% for (let friend of userToFind.friends){%>
+                                        <a href="/profile/<%= friend._id %>">
+                                            <div class="card card1">
+                                                <div class="card-body card-body1" style="text-align: center;">
+                                                    <%= friend.username %>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    <%}%>
+                                <%}%>
+                                
+                            </div> 
+                        </div>    
+                    </div>
+                </div>
+                <div class = "col-6 middleClass" style = "padding: 0px;">
+                    <div class = "container container3">
+                        <h1 class = "mt-4" style = "text-align: center;font-size: 60px;"><%= userToFind.username %></h1>
+                        <p style = "text-align: center;"><%= userToFind.email %></p>
+                        <table>
+                            <tr>
+                                <td style="font-size: 20px;"><strong>Friends</strong></td>
+                                <td style="width: 50px; height: 30px;"></td>
+                                <td style="font-size: 20px;"><strong>Posts</strong></td>
+                            </tr>
+                            <tr>
+                                <td style="text-align: center;font-size: 20px;"><strong><%= userToFind.friends.length %></strong></td>
+                                <td style="width: 50px; height: 30px;"></td>
+                                <td style="text-align: center;font-size: 20px;"><strong><%= foodPostsByUser.length %></strong></td>
+                            </tr>
+                        </table>
                     </div>
                     
-                <%}else{%>
-                    <% for (let friend of userToFind.friends){%>
-                        <a href="/profile/<%= friend._id %>">
-                            <div class="card">
-                                <div class="card-body">
-                                    <%= friend.username %>
-                                </div>
-                            </div>
-                        </a>
-                    <%}%>
-                <%}%>
-                
-            </div> 
-        </div>    
-    </div>
-
-    <% if (friendOption == 1){ %>
-        <div class = "sidebar2" style = "border-top-left-radius: 0px;border-bottom-left-radius: 0px;">
-            <header>
-                <h2><strong>Friend Requests</strong></h2>
-            </header>
-            <div class = "scrollbox">
-                <div class = "scrollbox-inner">
-                    <% if (!allFriendRequests.length){%>
-                        <div class="card">
-                            <div class="card-body card-body2">
-                                No Friends Requests
-                            </div>
-                        </div>
-                        
-                    <%}else{%>
-                        <% for (let friendReq of allFriendRequests){%>
-                            <a href="/profile/<%= friendReq.requester._id %>">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <%= friendReq.requester.username %>
+                </div>
+                <div class = "col-3" style = "padding: 0px;">
+                    <div class = "sidebar" style = "border-top-left-radius: 0px;border-bottom-left-radius: 0px;">
+                        <header class = "mt-3">
+                            <h2><strong>Friend Requests</strong></h2>
+                        </header>
+                        <br>
+                        <div class = "scrollbox">
+                            <div class = "scrollbox-inner">
+                                <% if (!allFriendRequests.length){%>
+                                    <div class="card card1">
+                                        <div class="card-body card-body2" style="text-align: center;">
+                                            No Friends Requests
+                                        </div>
                                     </div>
-                                </div>
-                            </a>
-                        <%}%>
-                    <%}%>
-                    
+                                    
+                                <%}else{%>
+                                    <% for (let friendReq of allFriendRequests){%>
+                                        <a href="/profile/<%= friendReq.requester._id %>">
+                                            <div class="card card1">
+                                                <div class="card-body card-body1" style="text-align: center;">
+                                                    <%= friendReq.requester.username %>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    <%}%>
+                                <%}%>
+                                
+            
+                            </div> 
+                        </div>    
+                    </div>
+                </div>
+            </div>
+        </div>
+    <%}else{%>
+        <div class = "container mycontainer1">
+            <div class = "row" style = "margin-left: 200px;">
+                <div class = "col-3" style = "padding: 0px;">
+                    <div class = "sidebar" style = "border-top-right-radius: 0px;border-bottom-right-radius: 0px;">
+                        <header class = "mt-3">
+                            <h2><strong>Friendlist</strong></h2>
+                        </header>
+                        <br>
+                        <div class = "scrollbox">
+                            <div class = "scrollbox-inner">
+                                <% if (!userToFind.friends.length){%>
+                                    <div class="card card1">
+                                        <div class="card-body card-body2" style="text-align: center;">
+                                            No Friends Yet
+                                        </div>
+                                    </div>
+                                    
+                                <%}else{%>
+                                    <% for (let friend of userToFind.friends){%>
+                                        <a href="/profile/<%= friend._id %>">
+                                            <div class="card card1">
+                                                <div class="card-body card-body1" style="text-align: center;">
+                                                    <%= friend.username %>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    <%}%>
+                                <%}%>
+                                
+                            </div> 
+                        </div>    
+                    </div>
+                </div>
+                <div class = "col-6 middleClass" style = "padding: 0px; border-top-right-radius: 20px;border-bottom-right-radius: 20px;">
+                    <div class = "container container3">
+                        <h1 class = "mt-4" style = "text-align: center;font-size: 60px;"><%= userToFind.username %></h1>
+                        <p style = "text-align: center;"><%= userToFind.email %></p>
+                        <table>
+                            <tr>
+                                <td style="font-size: 20px;"><strong>Friends</strong></td>
+                                <td style="width: 50px; height: 30px;"></td>
+                                <td style="font-size: 20px;"><strong>Posts</strong></td>
+                            </tr>
+                            <tr>
+                                <td style="text-align: center;font-size: 20px;"><strong><%= userToFind.friends.length %></strong></td>
+                                <td style="width: 50px; height: 30px;"></td>
+                                <td style="text-align: center;font-size: 20px;"><strong><%= foodPostsByUser.length %></strong></td>
+                            </tr>
+                        </table>
+                        <%if (friendOption == 2){ %>
 
-                </div> 
-            </div>    
+                            <form action="/profile/removeFriend/<%= userToFind._id %>?_method=DELETE" method = "POST">
+                                
+                                <button type="submit" id = "removeFriend">Remove Friend</button>
+                               
+                                
+                            </form>
+                            
+                        <% }else if(friendOption == 3){ %>
+                            <p>Friend request pending!</p>
+                        
+                        <% }else if(friendOption == 4){ %>
+                            <form action="/profile/acceptFriend/<%= userToFind._id %>" method = "POST">
+                                <button type="submit" id = "acceptFriendRequest">Accept Friend Request</button>
+                            </form>
+                        <% } else if(friendOption == 5){ %>
+                            <form action="/profile/addFriend/<%= userToFind._id %>" method = "POST">
+                                <button type="submit" id = "addFriend">Add Friend</button>
+                            </form>
+                        <% } %>
+                    </div>
+                    
+                </div>
+
+            </div>
         </div>
     <%}%>
 
 
-    <div class = "container" style="margin-left: 255px; background: white; width: 70%; padding: 0px;">
-        <p><%= userToFind.username %></p>
 
 
-       
-        
-        <%if (friendOption == 2){ %>
-            <form action="/profile/removeFriend/<%= userToFind._id %>?_method=DELETE" method = "POST">
-                <button type="submit">Remove Friend</button>
-            </form>
-        <% }else if(friendOption == 3){ %>
-            <p>Friend request pending!</p>
-        
-        <% }else if(friendOption == 4){ %>
-            <form action="/profile/acceptFriend/<%= userToFind._id %>" method = "POST">
-                <button type="submit">Accept Friend Request</button>
-            </form>
-        <% } else if(friendOption == 5){ %>
-            <form action="/profile/addFriend/<%= userToFind._id %>" method = "POST">
-                <button type="submit">Add Friend</button>
-            </form>
-        <% } %>
-        
+
         
         
         <br>
@@ -96,7 +182,7 @@
             <a href = "/foodposts/<%= foodpost._id %>"><%= foodpost.name %></a>
             <p>At <%= foodpost.location %></p>
         <%}%>
-    </div>
+
     
     
     
