refactor css code for centering

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,7 +22,7 @@
     <% } %>
 
 
-    <div class = "allposts">
+    <div class = "allposts" style = "display: flex;flex-direction: column;align-items: center;">
 
         <% for(var i = 0;i<arrOfFoodPost.length;i++){ %>
             <div class="card sm-3" >
