--- a/views/search.ejs
+++ b/views/search.ejs
@@ -14,7 +14,7 @@
         <br>
         <form action="/foodposts/search" method = "GET" name = "searchBar" class="validated-form" novalidate>
             <div class = "row">
-                <div class = "col-10">
+                <div class = "col-10 mycont">
                     <div class="input-wrapper">
                         <i class='bx bx-x bx-md clear-icon' ></i>
                         <input class = "searchBar" type="text" placeholder="Search" name = "search" required>
