--- a/public/cssfiles/search.css
+++ b/public/cssfiles/search.css
@@ -69,18 +69,25 @@ input:checked[type = "checkbox"]:before{
     left:30px;
 }
 
+.mycont{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
 .input-wrapper {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     background: #000;
     padding: 0.5rem;
     border-radius: 0.5rem;
     color: white;
     box-shadow: 0.25rem 0.25rem 0rem #c0c0c0;
     width: 70%;
-    margin-left: 270px;
+    margin-left: 200px;
+
   }
   
  .searchBar {
