--- a/public/cssfiles/show.css
+++ b/public/cssfiles/show.css
@@ -1,15 +1,15 @@
 
+
 #map { 
     top: 0; 
     bottom: 0; 
-    height: 550;
+    height: 550px;
     width:100%;
-    margin-left: 10px;
     margin-top: 50px;
     border-radius: 10px;
 }
 
-#foodpostCarousel{
+#carouselExampleIndicators{
     margin-left: auto;
     margin-right: auto;
     display:block;
@@ -37,16 +37,12 @@ img{
     border-bottom-right-radius: 10px;
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
-    width: 630px;
+    width: 100%;
     height: 100%;
 
 }
 
-.mycontainer1{
-    margin-left: 206px;
-    height: 450px;
-    
-}
+
 
 .card-title{
     font-size: 30px;
@@ -84,6 +80,8 @@ a:hover{
     transition: 0.4s;
     font-weight: bold;
     text-decoration: none;
+    width: 165px;
+
 }
 
 #mybutton2:hover{
@@ -138,9 +136,7 @@ a:hover{
     padding: 0.5rem;
     border-radius: 0px;    
     color: white;
-    width: 70%;
-    align-self: center;
-    margin-left: 210px;
+    width: 100%;
   }
   
  .searchBar {
@@ -168,4 +164,8 @@ cursor: pointer;
     position: absolute;
     top:10;
     right: 10;
+}
+
+form{
+    width: 70%;
 }
